# CS488

./: .gitignore  README.md  report.odt
A0/: A0.cpp  A0.cpp~  A0.hpp  A0.hpp~  README  imgui.ini
A1/: A1  A1.cpp  A1.hpp  CMakeLists.txt  CMakeLists_old.txt  Main.cpp  README  imgui.ini  maze.cpp  maze.hpp
A1/Assets/: VertexShader.vs
A2/: A2  A2.cpp  A2.hpp  CMakeLists.txt  Main.cpp  README  imgui.ini
A3/: A3.cpp  A3.hpp  CMakeLists.txt  GeometryNode.cpp  GeometryNode.hpp  JointNode.cpp  JointNode.hpp  Main.cpp  Material.hpp  README  SceneNode.cpp  SceneNode.hpp  imgui.ini  scene_lua.cpp  scene_lua.hpp
A3/Assets/: FragmentShader.fs  color_FragmentShader.fs  color_VertexShader.vs  jack_frost.lua  test_puppet.lua
A3/trackball_demo/: intdemo
A4/: A4.cpp  A4.hpp  CMakeLists.txt  GeometryNode.cpp  GeometryNode.hpp  Mesh.cpp  Mesh.hpp  PhongMaterial.cpp  PhongMaterial.hpp  Primitive.cpp  Primitive.hpp  README  SceneNode.cpp  SceneNode.hpp
A4/Assets/: hier.lua  nonhier.lua  sample.lua  sample_simple.lua  simple_sample.lua  test.lua
A5/: A5.cpp  A5.hpp  CMakeLists.txt  GeometryNode.cpp  GeometryNode.hpp  Mesh.hpp  PhongMaterial.cpp  PhongMaterial.hpp  Primitive.cpp  Primitive.hpp  README  scene.lua  scene_lua.cpp
A5/Assets/: box.lua  nonhier.lua  nonhier2.lua  scene.lua  test.lua
